Fix typos and unit test of ares-log
:Release Notes:
Fix typos and unit test of ares-log

:Detailed Notes:
- Fix miss typos
- Update unit test of ares-log

:Testing Performed:
1. Pass unit test
2. Pass eslint

:Issues Addressed:
[WRN-15807] Prepare to release CLI v2.3.0

--- a/files/templates/ose-sdk-templates/bootplate-web/index.html
+++ b/files/templates/ose-sdk-templates/bootplate-web/index.html
@@ -41,7 +41,7 @@ window.onload = function() {
      *  In this case, the service name is used as default name "com.domain.app.service" is.
      *  If you change this service name, you need to change the service name of the following API.
      *
-     *  If you change the name to helloparmas as you want, the contents will be reflected on the screen.
+     *  If you change the name to helloParmas as you want, the contents will be reflected on the screen.
      */
     var helloApi = 'luna://com.domain.app.service/hello';
     var helloParams = '{"name":"webOS"}';
